--- a/result/2021-12-31.md
+++ b/result/2021-12-31.md
@@ -1,7 +1,7 @@
-1. [白冰 芝士](https://s.weibo.com//weibo?q=%E7%99%BD%E5%86%B0%20%E8%8A%9D%E5%A3%AB&Refer=top) 2947975
+1. [白冰 芝士](https://s.weibo.com//weibo?q=%E7%99%BD%E5%86%B0%20%E8%8A%9D%E5%A3%AB&Refer=top) 3902234
 2. [张庭公司百元化妆品成本仅4元](https://s.weibo.com//weibo?q=%23%E5%BC%A0%E5%BA%AD%E5%85%AC%E5%8F%B8%E7%99%BE%E5%85%83%E5%8C%96%E5%A6%86%E5%93%81%E6%88%90%E6%9C%AC%E4%BB%854%E5%85%83%23&Refer=top) 2175030
 3. [江歌母亲诉刘鑫案宣判暂时取消](https://s.weibo.com//weibo?q=%23%E6%B1%9F%E6%AD%8C%E6%AF%8D%E4%BA%B2%E8%AF%89%E5%88%98%E9%91%AB%E6%A1%88%E5%AE%A3%E5%88%A4%E6%9A%82%E6%97%B6%E5%8F%96%E6%B6%88%23&Refer=top) 1845397
-4. [西安新增本土确诊161例](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E6%96%B0%E5%A2%9E%E6%9C%AC%E5%9C%9F%E7%A1%AE%E8%AF%8A161%E4%BE%8B%23&Refer=top) 1397728
+4. [西安新增本土确诊161例](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E6%96%B0%E5%A2%9E%E6%9C%AC%E5%9C%9F%E7%A1%AE%E8%AF%8A161%E4%BE%8B%23&Refer=top) 1453930
 5. [2021年度十大热词公布](https://s.weibo.com//weibo?q=%232021%E5%B9%B4%E5%BA%A6%E5%8D%81%E5%A4%A7%E7%83%AD%E8%AF%8D%E5%85%AC%E5%B8%83%23&Refer=top) 1298674
 6. [现代版富春山居图](https://s.weibo.com//weibo?q=%23%E7%8E%B0%E4%BB%A3%E7%89%88%E5%AF%8C%E6%98%A5%E5%B1%B1%E5%B1%85%E5%9B%BE%23&Refer=top) 1231832
 7. [倪妮李易峰金鸡奖开奖](https://s.weibo.com//weibo?q=%23%E5%80%AA%E5%A6%AE%E6%9D%8E%E6%98%93%E5%B3%B0%E9%87%91%E9%B8%A1%E5%A5%96%E5%BC%80%E5%A5%96%23&Refer=top) 1199865
@@ -36,10 +36,10 @@
 36. [中科院院士相信外星人存在](https://s.weibo.com//weibo?q=%23%E4%B8%AD%E7%A7%91%E9%99%A2%E9%99%A2%E5%A3%AB%E7%9B%B8%E4%BF%A1%E5%A4%96%E6%98%9F%E4%BA%BA%E5%AD%98%E5%9C%A8%23&Refer=top) 390469
 37. [人和狗各打各的](https://s.weibo.com//weibo?q=%23%E4%BA%BA%E5%92%8C%E7%8B%97%E5%90%84%E6%89%93%E5%90%84%E7%9A%84%23&Refer=top) 368232
 38. [上海一餐饮店寿司中加金箔被处罚](https://s.weibo.com//weibo?q=%23%E4%B8%8A%E6%B5%B7%E4%B8%80%E9%A4%90%E9%A5%AE%E5%BA%97%E5%AF%BF%E5%8F%B8%E4%B8%AD%E5%8A%A0%E9%87%91%E7%AE%94%E8%A2%AB%E5%A4%84%E7%BD%9A%23&Refer=top) 356763
-39. [这就是婚礼伴郎天花板吧](https://s.weibo.com//weibo?q=%23%E8%BF%99%E5%B0%B1%E6%98%AF%E5%A9%9A%E7%A4%BC%E4%BC%B4%E9%83%8E%E5%A4%A9%E8%8A%B1%E6%9D%BF%E5%90%A7%23&Refer=top) 343743
-40. [顾一野敬礼](https://s.weibo.com//weibo?q=%23%E9%A1%BE%E4%B8%80%E9%87%8E%E6%95%AC%E7%A4%BC%23&Refer=top) 343711
-41. [2021电视剧婚礼名场面](https://s.weibo.com//weibo?q=%232021%E7%94%B5%E8%A7%86%E5%89%A7%E5%A9%9A%E7%A4%BC%E5%90%8D%E5%9C%BA%E9%9D%A2%23&Refer=top) 342964
-42. [陕西新增本土确诊165例](https://s.weibo.com//weibo?q=%23%E9%99%95%E8%A5%BF%E6%96%B0%E5%A2%9E%E6%9C%AC%E5%9C%9F%E7%A1%AE%E8%AF%8A165%E4%BE%8B%23&Refer=top) 339416
+39. [陕西新增本土确诊165例](https://s.weibo.com//weibo?q=%23%E9%99%95%E8%A5%BF%E6%96%B0%E5%A2%9E%E6%9C%AC%E5%9C%9F%E7%A1%AE%E8%AF%8A165%E4%BE%8B%23&Refer=top) 348373
+40. [这就是婚礼伴郎天花板吧](https://s.weibo.com//weibo?q=%23%E8%BF%99%E5%B0%B1%E6%98%AF%E5%A9%9A%E7%A4%BC%E4%BC%B4%E9%83%8E%E5%A4%A9%E8%8A%B1%E6%9D%BF%E5%90%A7%23&Refer=top) 343743
+41. [顾一野敬礼](https://s.weibo.com//weibo?q=%23%E9%A1%BE%E4%B8%80%E9%87%8E%E6%95%AC%E7%A4%BC%23&Refer=top) 343711
+42. [2021电视剧婚礼名场面](https://s.weibo.com//weibo?q=%232021%E7%94%B5%E8%A7%86%E5%89%A7%E5%A9%9A%E7%A4%BC%E5%90%8D%E5%9C%BA%E9%9D%A2%23&Refer=top) 342964
 43. [霍格沃茨的狗血剧情](https://s.weibo.com//weibo?q=%23%E9%9C%8D%E6%A0%BC%E6%B2%83%E8%8C%A8%E7%9A%84%E7%8B%97%E8%A1%80%E5%89%A7%E6%83%85%23&Refer=top) 334546
 44. [12月30日新增确诊195例](https://s.weibo.com//weibo?q=%2312%E6%9C%8830%E6%97%A5%E6%96%B0%E5%A2%9E%E7%A1%AE%E8%AF%8A195%E4%BE%8B%23&Refer=top) 316754
 45. [召唤神龙](https://s.weibo.com//weibo?q=%E5%8F%AC%E5%94%A4%E7%A5%9E%E9%BE%99&Refer=top) 312869
@@ -83,11 +83,12 @@
 83. [元旦京港澳天宫对话](https://s.weibo.com//weibo?q=%23%E5%85%83%E6%97%A6%E4%BA%AC%E6%B8%AF%E6%BE%B3%E5%A4%A9%E5%AE%AB%E5%AF%B9%E8%AF%9D%23&Refer=top) 148347
 84. [外交部批日方无视邻国痛苦记忆](https://s.weibo.com//weibo?q=%23%E5%A4%96%E4%BA%A4%E9%83%A8%E6%89%B9%E6%97%A5%E6%96%B9%E6%97%A0%E8%A7%86%E9%82%BB%E5%9B%BD%E7%97%9B%E8%8B%A6%E8%AE%B0%E5%BF%86%23&Refer=top) 143182
 85. [男子盗窃虐打哈士奇被判拘役3个月](https://s.weibo.com//weibo?q=%23%E7%94%B7%E5%AD%90%E7%9B%97%E7%AA%83%E8%99%90%E6%89%93%E5%93%88%E5%A3%AB%E5%A5%87%E8%A2%AB%E5%88%A4%E6%8B%98%E5%BD%B93%E4%B8%AA%E6%9C%88%23&Refer=top) 137865
-86. [还以为是个普通的烟花](https://s.weibo.com//weibo?q=%23%E8%BF%98%E4%BB%A5%E4%B8%BA%E6%98%AF%E4%B8%AA%E6%99%AE%E9%80%9A%E7%9A%84%E7%83%9F%E8%8A%B1%23&Refer=top) 136577
-87. [如果用一个视频总结2021](https://s.weibo.com//weibo?q=%23%E5%A6%82%E6%9E%9C%E7%94%A8%E4%B8%80%E4%B8%AA%E8%A7%86%E9%A2%91%E6%80%BB%E7%BB%932021%23&Refer=top) 135732
-88. [张信哲被举报代言赌博平台](https://s.weibo.com//weibo?q=%23%E5%BC%A0%E4%BF%A1%E5%93%B2%E8%A2%AB%E4%B8%BE%E6%8A%A5%E4%BB%A3%E8%A8%80%E8%B5%8C%E5%8D%9A%E5%B9%B3%E5%8F%B0%23&Refer=top) 124904
-89. [2021重新出发](https://s.weibo.com//weibo?q=2021%E9%87%8D%E6%96%B0%E5%87%BA%E5%8F%91&Refer=top) 104082
-90. [夫妻购物pk大赛](https://s.weibo.com//weibo?q=%E5%A4%AB%E5%A6%BB%E8%B4%AD%E7%89%A9pk%E5%A4%A7%E8%B5%9B&Refer=top) 83192
-91. [民警冲入车流抱住迷路男孩](https://s.weibo.com//weibo?q=%23%E6%B0%91%E8%AD%A6%E5%86%B2%E5%85%A5%E8%BD%A6%E6%B5%81%E6%8A%B1%E4%BD%8F%E8%BF%B7%E8%B7%AF%E7%94%B7%E5%AD%A9%23&Refer=top) 61522
-92. [易上手年会妆容](https://s.weibo.com//weibo?q=%23%E6%98%93%E4%B8%8A%E6%89%8B%E5%B9%B4%E4%BC%9A%E5%A6%86%E5%AE%B9%23&Refer=top) 45022
-93. [每个2022心愿都闪闪发亮](https://s.weibo.com//weibo?q=%23%E6%AF%8F%E4%B8%AA2022%E5%BF%83%E6%84%BF%E9%83%BD%E9%97%AA%E9%97%AA%E5%8F%91%E4%BA%AE%23&Refer=top) 20068
+86. [2021差一点就做成的事](https://s.weibo.com//weibo?q=%232021%E5%B7%AE%E4%B8%80%E7%82%B9%E5%B0%B1%E5%81%9A%E6%88%90%E7%9A%84%E4%BA%8B%23&Refer=top) 137132
+87. [还以为是个普通的烟花](https://s.weibo.com//weibo?q=%23%E8%BF%98%E4%BB%A5%E4%B8%BA%E6%98%AF%E4%B8%AA%E6%99%AE%E9%80%9A%E7%9A%84%E7%83%9F%E8%8A%B1%23&Refer=top) 136577
+88. [如果用一个视频总结2021](https://s.weibo.com//weibo?q=%23%E5%A6%82%E6%9E%9C%E7%94%A8%E4%B8%80%E4%B8%AA%E8%A7%86%E9%A2%91%E6%80%BB%E7%BB%932021%23&Refer=top) 135732
+89. [张信哲被举报代言赌博平台](https://s.weibo.com//weibo?q=%23%E5%BC%A0%E4%BF%A1%E5%93%B2%E8%A2%AB%E4%B8%BE%E6%8A%A5%E4%BB%A3%E8%A8%80%E8%B5%8C%E5%8D%9A%E5%B9%B3%E5%8F%B0%23&Refer=top) 124904
+90. [2021重新出发](https://s.weibo.com//weibo?q=2021%E9%87%8D%E6%96%B0%E5%87%BA%E5%8F%91&Refer=top) 104082
+91. [夫妻购物pk大赛](https://s.weibo.com//weibo?q=%E5%A4%AB%E5%A6%BB%E8%B4%AD%E7%89%A9pk%E5%A4%A7%E8%B5%9B&Refer=top) 83192
+92. [民警冲入车流抱住迷路男孩](https://s.weibo.com//weibo?q=%23%E6%B0%91%E8%AD%A6%E5%86%B2%E5%85%A5%E8%BD%A6%E6%B5%81%E6%8A%B1%E4%BD%8F%E8%BF%B7%E8%B7%AF%E7%94%B7%E5%AD%A9%23&Refer=top) 61522
+93. [易上手年会妆容](https://s.weibo.com//weibo?q=%23%E6%98%93%E4%B8%8A%E6%89%8B%E5%B9%B4%E4%BC%9A%E5%A6%86%E5%AE%B9%23&Refer=top) 45022
+94. [每个2022心愿都闪闪发亮](https://s.weibo.com//weibo?q=%23%E6%AF%8F%E4%B8%AA2022%E5%BF%83%E6%84%BF%E9%83%BD%E9%97%AA%E9%97%AA%E5%8F%91%E4%BA%AE%23&Refer=top) 20068
